[package]
name = "redis_delay_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "redis_delay_queue"
crate-type = ["cdylib"]

[dependencies]
redis-module = "2.0.4"
uuid = {version = "1", features = ["v4"]}
tokio = {version = "*", features = ["full"]}
once_cell = "1"